--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="row"><div class=" col-sm-6 col-sm-offset-6">
                     <div class="mbr-hero animated fadeInUp">
                         <h1 class="mbr-hero__text">Boek</h1>
-                        <p class="mbr-hero__subtext">Click any text to edit or style it. Click blue "Gear" icon in the top right corner to hide/show buttons, text, title and change the block background. <br> Click red "+" in the bottom right corner to add a new block. Use the top left menu to create new pages, sites and add extensions.</p>
+                        <p class="mbr-hero__subtext">Luna</p>
                     </div>
                     <div class="mbr-buttons btn-inverse mbr-buttons--left"><a class="mbr-buttons__btn btn btn-lg btn-danger animated fadeInUp delay" href="https://mobirise.com">DOWNLOAD NOW</a> <a class="mbr-buttons__btn btn btn-lg btn-default animated fadeInUp delay" href="https://mobirise.com">LEARN MORE</a></div>
                 </div></div>
@@ -42,7 +42,7 @@
 </section>
 
 
-  <section class="engine"><a rel="external" href="https://mobirise.com">best offline website building software</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a rel="external" href="https://mobirise.com">best site building</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/SmoothScroll.js"></script>
   <script src="assets/jarallax/jarallax.js"></script>
